changing to royal blue

--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -77,26 +77,26 @@
     "\n",
     "- an example of a simulation and experiment = the game of 4 corners\n",
     "- games are simulations!\n",
+    "- We are going to play a round of 4 corners here in class.\n",
+    "    - This game is a real life version of our simulation.\n",
+    "    - Mr. Mortensen will be the person in the middle choosing corners.\n",
+    "    - Everyone will choose a corner, and if your corner is chosen, you are out!\n",
     "\n",
     "### The rules of the game:\n",
     "1. a person stands in the center of a room and the 4 coners are labeled 1-4\n",
     "2. Every player chooses a corner while the person in the middle closes their eyes\n",
-    "3. person in the middle chooses/calls out a number\n",
-    "4. every player in that corner is now out\n",
+    "3. person in the middle chooses/calls out a number when instructed\n",
+    "4. every player in the chosen corner is now out\n",
     "5. contine until there is a winner!\n",
     "\n",
-    "### Let's play!\n",
-    "\n",
-    "### Comparing Experiment to Simulation Code:\n",
-    "- Mr. Mortensen (person in the middle) = random.randint\n",
-    "- if statement = if player is out\n",
-    "- else = safe/continue\n",
-    "- while loop = repeats process until there is a winner of the game\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "DEBRIEF: why is it better to code simulations than experiement in real life?"
+    "### Let's play!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Below is the simulation of the four corners game!"
    ]
   },
   {
@@ -134,7 +134,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #1 \n",
+    "### Comparing Experiment to Simulation Code:\n",
+    "- Mr. Mortensen (person in the middle) = random.randint\n",
+    "- if statement = if player is out\n",
+    "- else = safe/continue\n",
+    "- while loop = repeats process until there is a winner of the game\n",
+    "\n",
+    "\n",
+    "\n",
+    "### DEBRIEF QUESTIONS: \n",
+    "1. Why is it better to code simulations than experiement in real life?\n",
+    "2. What makes this game a simulation?\n",
+    "3. What are its advantages and disadvantages?\n",
+    "4. Would an experiment be better in this situation? (raise hands for each team)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #1 - Alexa\n",
     "* Create an idea for a simulation and describe it (you don’t actually have to code it just think about/answer the guiding questions)."
    ]
   },
@@ -142,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #2 (collegeboard based questions)\n",
+    "## Hack #2 (collegeboard based questions) - Sri\n",
     "* Simulations Quiz (either screenshot or paste quiz in your notebook):"
    ]
   },
@@ -200,6 +219,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is a simulation of rolling dice! Examine the code and think about how this simulation works and its purpose!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -244,6 +270,26 @@
    "metadata": {},
    "source": [
     "# Game of Life - Lydia & Ava\n",
+    "\n",
+    "Below is a simulation of the Game of Life, originally written by John Horton Conway. Mr. Mortensen has this game on the APCSP site and we think that it is a great example of an interactive simulation. \n",
+    "\n",
+    "### What it is\n",
+    "- This game is an unpredictable cellular automaton\n",
+    "- automaton = imitates human life, hence why this is called the game of life\n",
+    "- After creating the initial configuration, the game evolves without pattern\n",
+    "\n",
+    "### How it works\n",
+    "- Cells in this game are alive or dead, similar to binary where they are on or off\n",
+    "- The user created an initial configuration of cells on the grid, and presses play (tap the squares on the grid)\n",
+    "- a cells's status (alive or dead, on or off) depends on the surrounding 8 cells status (surrounding 8 cells). Here are the rules:\n",
+    "    - The birth rule= a dead cell (non-)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "{% comment %}\n",
     "Conway's Game of Life https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life\n",
@@ -332,7 +378,7 @@
     "        if(val === 1) {\n",
     "        document.getElementById(\"cell-\"+n).style['background-color'] = 'yellow';\n",
     "        }else {\n",
-    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'lightblue'\n",
+    "        document.getElementById(\"cell-\"+n).style['background-color'] = 'royalblue'\n",
     "        }\n",
     "    });\n",
     "    })\n",
