--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -73,6 +73,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# A Real Life Example: Four Corners - Lydia & Ava\n",
     "\n",
     "- an example of a simulation and experiment = the game of 4 corners\n",
@@ -153,7 +161,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #1 - Alexa\n",
+    "<hr>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #1 \n",
     "* Create an idea for a simulation and describe it (you don’t actually have to code it just think about/answer the guiding questions)."
    ]
   },
@@ -161,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #2 (collegeboard based questions) - Sri\n",
+    "## Hack #2 (collegeboard based questions) \n",
     "* Simulations Quiz (either screenshot or paste quiz in your notebook):"
    ]
   },
@@ -208,6 +224,14 @@
     "    ask_question(questions[num], question_answers[num])\n",
     "\n",
     "print(\"You scored: \", answers_correct, \"/6\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>"
    ]
   },
   {
@@ -269,20 +293,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Game of Life - Lydia & Ava\n",
     "\n",
     "Below is a simulation of the Game of Life, originally written by John Horton Conway. Mr. Mortensen has this game on the APCSP site and we think that it is a great example of an interactive simulation. \n",
     "\n",
     "### What it is\n",
     "- This game is an unpredictable cellular automaton\n",
-    "- automaton = imitates human life, hence why this is called the game of life\n",
+    "- automaton = simulates and imitates human life, hence why this is called the game of life\n",
     "- After creating the initial configuration, the game evolves without pattern\n",
     "\n",
     "### How it works\n",
     "- Cells in this game are alive or dead, similar to binary where they are on or off\n",
     "- The user created an initial configuration of cells on the grid, and presses play (tap the squares on the grid)\n",
-    "- a cells's status (alive or dead, on or off) depends on the surrounding 8 cells status (surrounding 8 cells). Here are the rules:\n",
-    "    - The birth rule= a dead cell (non-)\n"
+    "- a cells's status (alive or dead, on or off) depends on the surrounding 8 cells status (surrounding 8 boxes). Here are the rules:\n",
+    "    - The birth rule= a dead cell (blue box) that is surrounded by at least 3 alive cells (yellow boxes), will become alive\n",
+    "    - The death rule= an alive cell (yellow) with no or only one surviving cell around it dies (becomes blue)\n",
+    "    - Cell survival= an alive cell (yellow) with 2 or 3 alive neighboring cells will stay alive\n",
+    "\n",
+    "### Try it Out!\n",
+    "\n",
+    "Use the grid below to create cell figurations, press play, and watch your cells die, live, and move around!\n"
    ]
   },
   {
@@ -489,7 +527,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #3\n",
+    "<hr>\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hack #3 \n",
     "* Describe the rolling dice simulation (answer guiding questions)"
    ]
   },
@@ -497,9 +543,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hack #4\n",
+    "## Hack #4 \n",
     "* Add a feature onto the rolling dice simulation above \n",
     "    - ex: a 14-sided dice or expand the purpose of the simulation (hint: use conditionals to make dice part of a game/real life situation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>"
    ]
   },
   {
