--- a/_notebooks/2022-12-12-Grades.ipynb
+++ b/_notebooks/2022-12-12-Grades.ipynb
@@ -51,7 +51,8 @@
     "| Nathan Capule | 0.97/1 | Ava Carlson | All hacks complete will full answers to guiding questions. Extra credit for traveling simulation but very simple |\t\t\t\t\t\t\t\t\t\t\t\n",
     "| Nikhil Chakravarthula\t| 0.8/1 | Alexa Carlson | Almost all hacks complete. Hack number 3 not complete (describe rolling dice simulation). 6/6 on quiz. Also late | \t\t\t\t\t\t\t\t\t\t\t\n",
     "| Ederick Wong | 0.95/1 | Ava Carlson | All hacks complete with very detailed answers to guiding questions. Extra 0.05 added for complex dice hack addition |\t\t\t\t\t\t\t\t\t\t\t\n",
-    "| Paaras Purohit | 0.95/1 | Sri Kotturi | All hacks complete with extra credit for simulation coded for example simulation. Although, guiding questions for dice not super detailed (but detailed for example simulation). |\t\t\t\t\t\t\t\t\t\t\t"
+    "| Paaras Purohit | 0.95/1 | Sri Kotturi | All hacks complete with extra credit for simulation coded for example simulation. Although, guiding questions for dice not super detailed (but detailed for example simulation). |\t\t\t\t\t\t\t\t\t\t\t\n",
+    "| Antony Yu | 0.79/1 | Lydia Cho | Hacks submitted late with guiding questions missing for hack 1 and extra credit. Hacks show little effort. |\t"
    ]
   }
  ],
