--- a/_notebooks/2022-12-12-Grades.ipynb
+++ b/_notebooks/2022-12-12-Grades.ipynb
@@ -21,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,7 +54,8 @@
     "| Ederick Wong | 0.95/1 | Ava Carlson | All hacks complete with very detailed answers to guiding questions. Extra 0.05 added for complex dice hack addition |\t\t\t\t\t\t\t\t\t\t\t\n",
     "| Paaras Purohit | 0.95/1 | Sri Kotturi | All hacks complete with extra credit for simulation coded for example simulation. Although, guiding questions for dice not super detailed (but detailed for example simulation). |\t\t\t\t\t\t\t\t\t\t\t\n",
     "| Antony Yu | 0.79/1 | Lydia Cho | Hacks submitted late with guiding questions missing for hack 1 and extra credit. Hacks show little effort. |\t\n",
-    "| Annika Liao | 0.8/1 | Ava Carlson | Hacks submitted late, guiding questions not fully answered but full extra credit|"
+    "| Annika Liao | 0.8/1 | Ava Carlson | Hacks submitted late, guiding questions not fully answered but full extra credit|\n",
+    "| Noor B. | 0.9/1 | Alexa Carlson | Hacks submitted late, all hacks complete (very well), 6/6 on quiz, full extra credit |"
    ]
   }
  ],
