--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -1,12 +1,24 @@
 ---
 
-title: Lesson Planning
+title: Week 18 Backend to Frontend
 toc: true
 comments: true
 layout: post
-description: Planning and outlining simulation lesson
-permalink: /lesson/planning
-image: /images/plan.jpg
-categories: [week 14]
+description: Backend to Frontend with Input Planning
+permalink: /lesson/week18
+categories: [week 18]
 
 ---
+
+
+## Our View
+
+### Home Page?
+- make user login?
+
+### Workout Log Input and Table
+![UML]({{site.baseurl}}/images/Backend-Frontend-UML.png)
+
+- add screenshots of backend code (class code that ava made)
+- add screenshots of frontend code (explain MD, html, CSS)
+
