--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -31,6 +31,8 @@ categories: [week 18]
 
 
 
-- add screenshots of backend code (class code that ava made)
-- add screenshots of frontend code (explain MD, html, CSS)
+- screenshots of backend code (user class code that ava made)
+- screenshots of page (home page, workout table)
+- screenshots of frontend code <- form(s) for input and CSS for home page
+- explain the MD, html, CSS
 
