adding images t\o markdown

--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -13,8 +13,14 @@ categories: [week 18]
 
 ## Our View
 
-### Home Page?
-- make user login?
+### Home Page
+![home page]({{site.baseurl}}/images/homepage.jpg)
+![index backend]({{site.baseurl}}/images/indexpagebackend.jpg)
+![Defult HTML]({{site.baseurl}}/images/defaulthtmlcode.jpg)
+
+### Workout Log Page
+![Workout Log Frontend]({{site.baseurl}}/images/workoutlogfrontend.jpg)
+![Workout Log Backend]({{site.baseurl}}/images/formbackend.jpg)
 
 ### Workout Log Input and Table
 ![UML]({{site.baseurl}}/images/Backend-Frontend-UML.png)
