explanations, CSS boxes, and form

--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -40,5 +40,11 @@ categories: [week 18]
 - screenshots of backend code (user class code that ava made)
 - screenshots of page (home page, workout table)
 - screenshots of frontend code <- form(s) for input and CSS for home page
+
+![Frontend Code]({{site.baseurl}}/images/BeginningStepforCrud.jpg)
+- This is the code that uses html 5 input in the table. This allows people to input their workouts, and the input will go through our UML process (shown in the ss above)
+
 - explain the MD, html, CSS
 
+![CSS Boxes]({{site.baseurl}}/images/CSSboxes.jpg)
+- This is the code that uses CSS to create the boxes on our project home page. By using CSS, we are able to format aspects of the boxes like the width, height, position, etc.
