--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -39,12 +39,19 @@ categories: [week 18]
 
 - screenshots of backend code (user class code that ava made)
 - screenshots of page (home page, workout table)
-- screenshots of frontend code <- form(s) for input and CSS for home page
+
+## Frontend Code
 
 ![Frontend Code]({{site.baseurl}}/images/BeginningStepforCrud.jpg)
-- This is the code that uses html 5 input in the table. This allows people to input their workouts, and the input will go through our UML process (shown in the ss above)
+- This is the code that is the beginning step for C.R.U.D. This uses html 5 input in the table, allowing people to input their workouts. Then, the input will go through our UML process (shown in the ss above).
 
-- explain the MD, html, CSS
+##### CRUD
+C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.
+R - The information inputted will go through our UML process.
+U - The information, once processed, will be added to the table (such as the workout logs)
+D - The user could have the option to delete on command, not when the page refreshes.
+
+### CSS on our Home Page
 
 ![CSS Boxes]({{site.baseurl}}/images/CSSboxes.jpg)
 - This is the code that uses CSS to create the boxes on our project home page. By using CSS, we are able to format aspects of the boxes like the width, height, position, etc.
