photo format fix

--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -42,7 +42,7 @@ categories: [week 18]
 
 ## Frontend Code
 
-![Frontend Code]({{site.baseurl}}/images/BeginningStepforCrud.jpg)
+![Frontend Code]({{site.baseurl}}/images/BeginningStepforCrud.png)
 - This is the code that is the beginning step for C.R.U.D. This uses html 5 input in the table, allowing people to input their workouts. Then, the input will go through our UML process (shown in the ss above).
 
 ##### CRUD
@@ -53,5 +53,5 @@ D - The user could have the option to delete on command, not when the page refre
 
 ### CSS on our Home Page
 
-![CSS Boxes]({{site.baseurl}}/images/CSSboxes.jpg)
+![CSS Boxes]({{site.baseurl}}/images/CSSboxes.png)
 - This is the code that uses CSS to create the boxes on our project home page. By using CSS, we are able to format aspects of the boxes like the width, height, position, etc.
