--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -40,6 +40,8 @@ categories: [week 18]
 - screenshots of backend code (user class code that ava made)
 - screenshots of page (home page, workout table)
 
+![Home Page Login]({{site.baseurl}}/images/LoginButton.png)
+
 ## Frontend Code
 
 ![Frontend Code]({{site.baseurl}}/images/BeginningStepforCrud.png)
