chaning num of #

--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -11,7 +11,7 @@ categories: [week 18]
 ---
 
 
-## Our View
+## Our View and Model
 
 ### Home Page
 ![home page]({{site.baseurl}}/images/homepage.jpg)
@@ -42,7 +42,7 @@ categories: [week 18]
 ![Frontend Code]({{site.baseurl}}/images/BeginningStepforCrud.png)
 - This is the code that is the beginning step for C.R.U.D. This uses html 5 input in the table, allowing people to input their workouts. Then, the input will go through our UML process (shown in the ss above).
 
-##### CRUD
+#### CRUD
 C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.
 R - The information inputted will go through our UML process.
 U - The information, once processed, will be added to the table (such as the workout logs)
