--- a/_notebooks/2022-12-12-Grades.ipynb
+++ b/_notebooks/2022-12-12-Grades.ipynb
@@ -65,7 +65,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
