adding "worth" for alexa

--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -45,7 +45,7 @@ categories: [week 18]
 
 ## Backend Code
 ![Backend Code]({{site.baseurl}}/images/backendcode.png)
-The image above is the Object Oriented Backend Code that will be used to process the data sent from the frontend forms. We are trying to have personalized data and tables for each user. I think that adding setter and getter functions for each table will allow users to have an individual experience. We would have one class called users, and their data would be extracted and added to dictionaries for each of the individual tables. I am not sure if this is exactly how this works, but it was a shot.
+The image above is the Object Oriented Backend Code that will be used to process the data sent from the frontend forms. We are trying to have personalized data and tables for each user. I think that adding setter and getter functions for each table will allow users to have an individual experience. We would have one class called users, and their data would be extracted and added to dictionaries for each of the individual tables. I am not sure if this is exactly how this works, but it was worth a shot.
 
 #### CRUD
 - C - In our website, we are creating a login system where the user can input their information and workouts on individual tables.
