adding tag on md

--- a/_posts/2023-01-16-Week-18.md
+++ b/_posts/2023-01-16-Week-18.md
@@ -6,7 +6,7 @@ comments: true
 layout: post
 description: Backend to Frontend with Input Planning
 permalink: /lesson/week18
-categories: [week 18]
+categories: [week 18, planning]
 
 ---
 
