--- a/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
+++ b/_notebooks/2022-11-30-SimulationStudentLesson.ipynb
@@ -476,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -495,7 +495,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "25ccfe66b39282fc3ea19bf8fc3cc43ce18f6044ac6a7f466ec4a156f6861604"
+    "hash": "c592ff5847e581e8b66b02dcd331c526c35045e822da212864271a73a90b0063"
    }
   }
  },
